force-app/main/default/objects/Enrollment__c/Enrollment__c.object-meta.xml
<CustomObject>
    <description>This is a backend, system-only object that should not have data saved to it.  It is used to get around the lack of access to the account object for our authenticated sites license.</description>
    <label>Enrollment</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Enrollment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>