force-app/main/default/objects/Enrollment__c/fields/DUNS__c.field-meta.xml
<CustomField>
    <fullName>DUNS__c</fullName>
    <label>DUNS</label>
    <length>9</length>
    <type>Text</type>
</CustomField>