force-app/main/default/objects/Enrollment__c/fields/Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code__c</fullName>
    <description>Used for promotional / referral codes</description>
    <label>Promo Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>