force-app/main/default/objects/Enrollment__c/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <label>SSN</label>
    <length>11</length>
    <maskChar>asterisk</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>