force-app/main/default/objects/Enrollment__c/fields/Taxpayer_ID_EIN__c.field-meta.xml
<CustomField>
    <fullName>Taxpayer_ID_EIN__c</fullName>
    <label>Taxpayer ID/EIN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>