force-app/main/default/objects/Enrollment__c/validationRules/Age_must_be_18.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_must_be_18</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Not(IsBlank(Date_of_Birth__c ))
,
today() - Date_of_Birth__c &lt; (365*18)
)</errorConditionFormula>
    <errorMessage>Enrollment02: You must be at least 18 to order an electric plan.</errorMessage>
</ValidationRule>