force-app/main/default/objects/Enrollment__c/validationRules/Must_have_either_EIN_or_SSN.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_either_EIN_or_SSN</fullName>
    <active>true</active>
    <errorConditionFormula>AND (    ISBLANK (SSN__c),  ISBLANK( Taxpayer_ID_EIN__c ),  $Profile.Name !=&quot;TrueCost Profile&quot;    )</errorConditionFormula>
    <errorMessage>Enrollment06: An SSN or an EIN is required to place an order</errorMessage>
</ValidationRule>