force-app/main/default/objects/Enrollment__c/validationRules/Passwords_must_match.validationRule-meta.xml
<ValidationRule>
    <fullName>Passwords_must_match</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Password__c)), Confirm_Password__c != Password__c)</errorConditionFormula>
    <errorMessage>Enrollment05: Your password must match.</errorMessage>
</ValidationRule>