force-app/main/default/objects/Enrollment__c/validationRules/Phone_number_digit_count.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number_digit_count</fullName>
    <active>true</active>
    <description>Enforces 10-digit phone numbers</description>
    <errorConditionFormula>AND(
NOT(REGEX(Phone__c, &quot;\\D*?(\\d\\D*?){10}&quot;)) ,
Len(Phone__c)&gt;0
)</errorConditionFormula>
    <errorMessage>Enrollment03: Phone numbers should be in this format: (999) 999-9999</errorMessage>
</ValidationRule>