force-app/main/default/objects/Enrollment__c/validationRules/Valid_SSN.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_SSN</fullName>
    <active>true</active>
    <description>Enforces 9-digit SSNs</description>
    <errorConditionFormula>AND(
NOT(REGEX(SSN__c, &quot;\\D*?(\\d\\D*?){9}&quot;)) ,
Len(SSN__c)&gt;0
)</errorConditionFormula>
    <errorMessage>Enrollment04: Your Social Security Number must have nine numerals</errorMessage>
</ValidationRule>